[gd_scene load_steps=10 format=3 uid="uid://cqbub2tu8p1bs"]

[ext_resource type="Script" path="res://Code/Scripts/start_menu.gd" id="1_ovi72"]
[ext_resource type="Texture2D" uid="uid://rqta1853o2am" path="res://Rescources/2d/mm-button.png" id="2_h6yc8"]
[ext_resource type="AudioStream" uid="uid://bwv2mivqf2tvd" path="res://Rescources/Sound/menu1.wav" id="2_y6pwj"]
[ext_resource type="Texture2D" uid="uid://b26siqehgqve6" path="res://Rescources/2d/mm-button-pressed.png" id="3_bn1i5"]
[ext_resource type="Texture2D" uid="uid://11mbnb1c0k2q" path="res://Rescources/2d/play-button-fucus.png" id="4_gh1sp"]
[ext_resource type="Texture2D" uid="uid://c4vkd68ue1ji1" path="res://Rescources/2d/restart-button.png" id="5_5fqo4"]
[ext_resource type="Texture2D" uid="uid://cy3iv0d07y03p" path="res://Rescources/2d/restart-button-pressed.png" id="6_d31wk"]
[ext_resource type="Texture2D" uid="uid://dsrkpd0arj5fw" path="res://Rescources/2d/quit-button.png" id="7_k3h4s"]
[ext_resource type="Texture2D" uid="uid://f7l5eu4dbave" path="res://Rescources/2d/quit-button-pressed.png" id="8_0f31t"]

[node name="StartMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ovi72")
buttonSound = ExtResource("2_y6pwj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.235294)

[node name="MainMenu" type="TextureButton" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 432.0
offset_top = 281.0
offset_right = 720.0
offset_bottom = 377.0
texture_normal = ExtResource("2_h6yc8")
texture_pressed = ExtResource("3_bn1i5")
texture_focused = ExtResource("4_gh1sp")

[node name="Restart" type="TextureButton" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 432.0
offset_top = 181.0
offset_right = 720.0
offset_bottom = 277.0
texture_normal = ExtResource("5_5fqo4")
texture_pressed = ExtResource("6_d31wk")
texture_focused = ExtResource("4_gh1sp")

[node name="Quit" type="TextureButton" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 432.0
offset_top = 381.0
offset_right = 720.0
offset_bottom = 477.0
texture_normal = ExtResource("7_k3h4s")
texture_pressed = ExtResource("8_0f31t")
texture_focused = ExtResource("4_gh1sp")

[connection signal="button_up" from="MainMenu" to="." method="_on_main_menu_button_up"]
[connection signal="button_up" from="Restart" to="." method="_on_restart_button_up"]
[connection signal="button_up" from="Quit" to="." method="_on_quit_button_up"]
